--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="images/logo.png" alt="MKTech Logo" class="logo">
         <h1>MKTech</h1>
         <nav>
             <a href="index.html">Home</a>
@@ -18,13 +19,13 @@
     <main>
         <section class="new-posts">
             <article>
-                <img src="image1.jpg" alt="Tech Item 1">
+                <img src="images/post1.jpg" alt="Tech Item 1">
                 <h2>Tech Post 1</h2>
                 <p>A brief description of this exciting tech item.</p>
                 <button class="like-button">Like</button>
             </article>
             <article>
-                <img src="image2.jpg" alt="Tech Item 2">
+                <img src="images/post2.jpg" alt="Tech Item 2">
                 <h2>Tech Post 2</h2>
                 <p>A brief description of this innovative gadget.</p>
                 <button class="like-button">Like</button>
