--- a/learn-more.html
+++ b/learn-more.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="images/logo.png" alt="MKTech Logo" class="logo">
         <h1>MKTech</h1>
         <nav>
             <a href="index.html">Home</a>
@@ -16,9 +17,16 @@
         </nav>
     </header>
     <main>
-        <section class="about">
+        <section class="about-site">
             <h2>About MKTech</h2>
             <p>MKTech is your go-to source for insightful reviews and commentary on the latest technology. Subscribe to stay updated!</p>
+        </section>
+        <section class="about-me">
+            <h2>About Me</h2>
+            <div class="about-me-content">
+                <img src="images/headshot.jpg" alt="Your Headshot" class="headshot">
+                <p>Hello! I'm Michael Koss, a passionate tech enthusiast and web design student at Michigan State University. I enjoy sharing my insights and experiences with technology, making it accessible and exciting for everyone. MKTech is my platform to explore and showcase my favorite gadgets and innovations.</p>
+            </div>
         </section>
         <form>
             <label for="email">Subscribe for updates:</label>
