--- a/previous-posts.html
+++ b/previous-posts.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <img src="images/logo.png" alt="MKTech Logo" class="logo">
         <h1>MKTech</h1>
         <nav>
             <a href="index.html">Home</a>
@@ -18,12 +19,12 @@
     <main>
         <section class="previous-posts">
             <article>
-                <img src="image3.jpg" alt="Previous Tech Item 1">
+                <img src="images/post3.jpg" alt="Previous Tech Item 1">
                 <h2>Previous Post 1</h2>
                 <p>Summary of the first archived tech post.</p>
             </article>
             <article>
-                <img src="image4.jpg" alt="Previous Tech Item 2">
+                <img src="images/post4.jpg" alt="Previous Tech Item 2">
                 <h2>Previous Post 2</h2>
                 <p>Summary of the second archived tech post.</p>
             </article>
