--- a/learn-more.html
+++ b/learn-more.html
@@ -11,9 +11,11 @@
         <img src="images/logo.png" alt="MKTech Logo" class="logo">
         <h1>MKTech</h1>
         <nav>
-            <a href="index.html">Home</a>
-            <a href="learn-more.html">Learn More</a>
-            <a href="previous-posts.html">Previous Posts</a>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="learn-more.html">Learn More</a></li>
+                <li><a href="previous-posts.html">Previous Posts</a></li>
+            </ul>
         </nav>
     </header>
     <main>
