--- a/previous-posts.html
+++ b/previous-posts.html
@@ -21,14 +21,14 @@
     <main>
         <section class="previous-posts">
             <article>
-                <img src="images/post3.jpg" alt="Previous Tech Item 1">
-                <h2>Previous Post 1</h2>
-                <p>Summary of the first archived tech post.</p>
+                <img src="images/iphone-15-pro-max.jpg" alt="iPhone 15 Pro Max">
+                <h2>iPhone 15 Pro Max</h2>
+                <p>Apple’s iPhone 15 Pro Max represents a leap forward in smartphone innovation with its lightweight titanium frame, powerful A17 Pro chip, and stunning camera capabilities. From cinematic video recording to capturing pro-level photos, this device sets a new benchmark for mobile technology.</p>
             </article>
             <article>
-                <img src="images/post4.jpg" alt="Previous Tech Item 2">
-                <h2>Previous Post 2</h2>
-                <p>Summary of the second archived tech post.</p>
+                <img src="images/ipad-10th-gen.jpg" alt="iPad 10th Generation">
+                <h2>iPad 10th Generation</h2>
+                <p>The 10th-generation iPad is Apple’s most versatile tablet yet, featuring a vibrant 10.9-inch display, A14 Bionic chip for smooth performance, and compatibility with the Apple Pencil. It’s perfect for everything from note-taking to streaming and gaming.</p>
             </article>
         </section>
     </main>
