--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
     </header>
     <main>
         <section class="new-posts">
+            <h2>New Posts</h2> 
             <article>
                 <img src="images/nzxt-player-two-black.jpg" alt="NZXT Player Two PC in Black">
-                <h2>NZXT Player Two PC <span class="thumbs-up"></span></h2>
+                <h3>NZXT Player Two PC <span class="thumbs-up"></span></h3>
                 <p>The NZXT Player Two PC in its sleek black finish is the ideal choice for gamers and creators seeking top-tier performance and aesthetic appeal. Equipped with the latest Intel or AMD processors and powerful NVIDIA RTX graphics cards, this system ensures exceptional speed and stunning visuals for demanding tasks. Its intuitive design allows for easy upgrades, catering to evolving technological needs.</p>
                 <label>
                     <input type="checkbox" class="like-checkbox">
@@ -31,7 +32,7 @@
             </article>
             <article>
                 <img src="images/sony-wh-1000xm4.jpg" alt="Sony WH-1000XM4 Headphones">
-                <h2>Sony WH-1000XM4 Headphones <span class="thumbs-up"></span></h2>
+                <h3>Sony WH-1000XM4 Headphones <span class="thumbs-up"></span></h3>
                 <p>The Sony WH-1000XM4 headphones set the gold standard for noise cancellation, offering a premium listening experience with crystal-clear audio and immersive bass. Whether you're working, commuting, or relaxing, these headphones adapt to your surroundings with smart noise-canceling technology.</p>
                 <label>
                     <input type="checkbox" class="like-checkbox">
