--- a/previous-posts.html
+++ b/previous-posts.html
@@ -20,16 +20,19 @@
     </header>
     <main>
         <section class="previous-posts">
-            <article>
-                <img src="images/iphone-15-pro-max.jpg" alt="iPhone 15 Pro Max">
-                <h2>iPhone 15 Pro Max</h2>
-                <p>Apple’s iPhone 15 Pro Max represents a leap forward in smartphone innovation with its lightweight titanium frame, powerful A17 Pro chip, and stunning camera capabilities. From cinematic video recording to capturing pro-level photos, this device sets a new benchmark for mobile technology.</p>
-            </article>
-            <article>
-                <img src="images/ipad-10th-gen.jpg" alt="iPad 10th Generation">
-                <h2>iPad 10th Generation</h2>
-                <p>The 10th-generation iPad is Apple’s most versatile tablet yet, featuring a vibrant 10.9-inch display, A14 Bionic chip for smooth performance, and compatibility with the Apple Pencil. It’s perfect for everything from note-taking to streaming and gaming.</p>
-            </article>
+            <h2 class="section-title">Previous Posts</h2> <!-- Centered Title -->
+            <div class="posts-grid">
+                <article>
+                    <img src="images/iphone-15-pro-max.jpg" alt="iPhone 15 Pro Max">
+                    <h3>iPhone 15 Pro Max</h3>
+                    <p>Apple’s iPhone 15 Pro Max represents a leap forward in smartphone innovation with its lightweight titanium frame, powerful A17 Pro chip, and stunning camera capabilities. From cinematic video recording to capturing pro-level photos, this device sets a new benchmark for mobile technology.</p>
+                </article>
+                <article>
+                    <img src="images/ipad-10th-gen.jpg" alt="iPad 10th Generation">
+                    <h3>iPad 10th Generation</h3>
+                    <p>The 10th-generation iPad is Apple’s most versatile tablet yet, featuring a vibrant 10.9-inch display, A14 Bionic chip for smooth performance, and compatibility with the Apple Pencil. It’s perfect for everything from note-taking to streaming and gaming.</p>
+                </article>
+            </div>
         </section>
     </main>
     <footer>
