--- a/previous-posts.html
+++ b/previous-posts.html
@@ -20,7 +20,7 @@
     </header>
     <main>
         <section class="previous-posts">
-            <h2 class="section-title">Previous Posts</h2> <!-- Centered Title -->
+            <h2 class="section-title">Previous Posts</h2> 
             <div class="posts-grid">
                 <article>
                     <img src="images/iphone-15-pro-max.jpg" alt="iPhone 15 Pro Max">
